--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,6 @@
     },
     "scripts": {
         "start": "php -S localhost:8080 -t public",
-        "test": "phpunit"
+        "test": "phpunit ./tests"
     }
 }
